syntax = "proto3";

package cart;

option go_package = "./pkg/cart/pb";

service CartService {
  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse) {};
  rpc DisplayCart(DisplayCartRequest) returns (DisplayCartResponse) {};
  rpc OrderFromCart(OrderRequest) returns (OrderResponse) {};
}

message OrderRequest {
  repeated Cart cartproducts = 1;
  int64 addressid = 2;
  int64 userid = 3;
}

message OrderResponse {
  int64 orderid = 1;
}

message AddToCartRequest {
  int64 productid = 1;
  int64 userid = 2;
}

message AddToCartResponse {
 int64 status = 1;
}

message DisplayCartRequest {
  int64 userid = 1;
}

message Cart {
  int64 prdoductid = 1;
  string moviename = 2;
  int64 quantity = 3;
  float totalprice = 4;
}

message DisplayCartResponse {
  string username = 1;
  float totalprice = 2;
  repeated Cart cartproducts = 3;
}