syntax = "proto3";

package user;

option go_package = "./pkg/user/pb";

service AuthService {
  rpc SampleRequest(RegisterRequest) returns (RegisterResponse) {};
  rpc UserSignUp(SingUpRequest) returns (SignUpResponse) {};
  rpc UserLogin(LoginInRequest) returns (LoginResponse) {};
  rpc ValidateUser(ValidateRequest) returns (ValidateResponse) {};
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse) {};
  rpc GetAddress(GetAddressRequest) returns (GetAddressResponse) {};
}

// Register

message AddAddressRequest {
  int64 userid = 4;
  string name = 1;
  string housename = 2;
  string city = 3;
}

message AddAddressResponse {
  int64 status = 1;
}

message GetAddressRequest {
  int64 userid = 1;
}

message AddressResponse {
  int64 id = 5;
  int64 userid = 4;
  string name = 1;
  string housename = 2;
  string city = 3;
}

message GetAddressResponse {
  repeated AddressResponse addresses = 2;
}


message RegisterRequest {
  string request = 1;
}

message RegisterResponse {
  string response = 1;
}

message SingUpRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  string confirmpassword = 5;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}

message LoginInRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string status = 2;
  string error = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int64 userID = 1;
  int64 status = 2;
}